# OCR_Mortality

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: 1.Get_Data.py
src/ocr_pipeline/: __init__.py
